--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,13 @@
         width: 100%;
        }
     </style>
+    <link rel='stylesheet' href='{% static 'vendor/css/nprogress.css' %}'/>
+
     <script>
         window.MAP_POINTS_API_URL = "{% url 'map-points-api' %}";
         window.FUSION_TABLE_ID = '1OzxHLEdglBanM5IvjEBh9RhFmOwK2rV_rULJBnXk';
     </script>
+    <script src='{% static 'vendor/js/nprogress.js' %}'></script>
     <script src="https://apis.google.com/js/api.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlRx9pTkBeYEsRrAhQQQuM0o4ihJi1kEA"></script>
   </head>
